--- a/index.html
+++ b/index.html
@@ -2,35 +2,35 @@
  <head>
  <title>Pixar Movies</title>
  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-   
+
    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-   
+
    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
-   
+
   <script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
 
   <script type="text/javascript" src="assets/javascript/app.js"></script>
   </head>
-  
+
   <body>
     <div class="container">
       <div id="banner"><center><img src="assets/images/pixar.png"></center></div>
       <h1>Movie Gifs</h1>
       <h2>Click on the buttons below to view your favorite Pixar movie gifs. Don't see your favorite Pixar movie? No worries, simply submit your favorite movie and it will appear!</h2>
-    
+
       <div id="buttonsView"></div>
       <br>
-  
+
       <form id="movie-form">
         <label for="movie-input">Add your favorite Pixar movie</label>
         <input type="text" id="movie-input"><br>
          <br>
         <input id="addMovie" type="submit" value="Submit">
       </form>
-  
-      <div id="gifsAppearHere">
+
+      <div id="gifsAppearHere"></div><br>
     </div>
   </body>
 </html>
